fix(buttons): reset spacing between buttons to 10px

--- a/src/styles/common/_buttons.scss
+++ b/src/styles/common/_buttons.scss
@@ -82,7 +82,7 @@
     }
 
     & + & {
-        margin-left: 5px;
+        margin-left: 10px;
     }
 }
 
